# custodian

./: meson.build
src/: Application.vala  ViewBase.vala  meson.build
src/Views/: LoginView.vala
src/configs/: Settings.vala
src/controllers/: AppController.vala
src/dialogs/: LoginWindow.vala  MainWindow.vala
src/views/: AppView.vala
src/widgets/: Sidebar.vala
